// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkBannerAlert should accept user-stlying 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Object {
        "width": 50,
      },
      Object {
        "borderColor": "rgb(0, 215, 117)",
      },
    ]
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexGrow": 1,
        "minHeight": 30,
      }
    }
  >
    <View
      style={
        Array [
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexGrow": 1,
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 4,
            },
          ],
        ]
      }
    >
      <Image
        source={1}
        style={
          Array [
            Object {
              "height": 16,
              "width": 16,
            },
            Object {
              "tintColor": "rgb(0, 215, 117)",
            },
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": undefined,
              "lineHeight": 20,
            },
            false,
            Object {
              "flexGrow": 1,
              "paddingLeft": 4,
            },
          ]
        }
      >
        Successful alert.
      </Text>
    </View>
  </View>
  <View
    collapsable={undefined}
    style={
      Object {
        "height": 1,
        "overflow": "hidden",
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Object {
        "borderColor": "rgb(0, 215, 117)",
      },
    ]
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexGrow": 1,
        "minHeight": 30,
      }
    }
  >
    <View
      style={
        Array [
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexGrow": 1,
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 4,
            },
          ],
        ]
      }
    >
      <Image
        source={1}
        style={
          Array [
            Object {
              "height": 16,
              "width": 16,
            },
            Object {
              "tintColor": "rgb(0, 215, 117)",
            },
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": undefined,
              "lineHeight": 20,
            },
            false,
            Object {
              "flexGrow": 1,
              "paddingLeft": 4,
            },
          ]
        }
      >
        Successful alert.
      </Text>
    </View>
  </View>
  <View
    collapsable={undefined}
    style={
      Object {
        "height": 1,
        "overflow": "hidden",
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly dismissable 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Object {
        "borderColor": "rgb(0, 215, 117)",
      },
    ]
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexGrow": 1,
        "minHeight": 30,
      }
    }
  >
    <View
      style={
        Array [
          Array [
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "row",
              "flexGrow": 1,
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
              "paddingTop": 4,
            },
            Object {
              "paddingRight": 0,
            },
          ],
        ]
      }
    >
      <Image
        source={1}
        style={
          Array [
            Object {
              "height": 16,
              "width": 16,
            },
            Object {
              "tintColor": "rgb(0, 215, 117)",
            },
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "rgb(82, 76, 97)",
              "fontFamily": "sans-serif",
              "fontSize": 14,
              "fontWeight": undefined,
              "lineHeight": 20,
            },
            false,
            Object {
              "flexGrow": 1,
              "paddingLeft": 4,
            },
          ]
        }
      >
        Successful alert.
      </Text>
    </View>
    <View
      accessibilityComponentType="button"
      accessibilityLabel={null}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "alignItems": "center",
            "display": "flex",
            "flexDirection": "row",
            "height": "100%",
            "justifyContent": "center",
            "width": 32,
          },
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Image
        source={1}
        style={
          Array [
            Object {
              "height": 16,
              "width": 16,
            },
            Object {
              "height": 16,
              "tintColor": "rgb(82, 76, 97)",
              "width": 16,
            },
            undefined,
          ]
        }
      />
    </View>
  </View>
  <View
    collapsable={undefined}
    style={
      Object {
        "height": 1,
        "overflow": "hidden",
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      />
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly expandable 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Object {
        "borderColor": "rgb(0, 215, 117)",
      },
    ]
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexGrow": 1,
        "minHeight": 30,
      }
    }
  >
    <View
      accessibilityComponentType="button"
      accessibilityLabel={null}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "display": "flex",
            "flexDirection": "row",
            "flexGrow": 1,
            "minHeight": 30,
          },
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "flexGrow": 1,
                "paddingBottom": 4,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 4,
              },
            ],
          ]
        }
      >
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 16,
                "width": 16,
              },
              Object {
                "tintColor": "rgb(0, 215, 117)",
              },
            ]
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": undefined,
                "lineHeight": 20,
              },
              false,
              Object {
                "flexGrow": 1,
                "paddingLeft": 4,
              },
            ]
          }
        >
          Successful alert.
        </Text>
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 16,
                "width": 16,
              },
              Object {
                "height": 16,
                "tintColor": "rgb(82, 76, 97)",
                "width": 16,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    collapsable={undefined}
    style={
      Object {
        "height": 1,
        "overflow": "hidden",
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": undefined,
                "lineHeight": 20,
              },
              false,
              Object {},
            ]
          }
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly expanded 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Object {
        "borderColor": "rgb(0, 215, 117)",
      },
    ]
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexGrow": 1,
        "minHeight": 30,
      }
    }
  >
    <View
      accessibilityComponentType="button"
      accessibilityLabel={null}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "display": "flex",
            "flexDirection": "row",
            "flexGrow": 1,
            "minHeight": 30,
          },
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "flexGrow": 1,
                "paddingBottom": 4,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 4,
              },
            ],
          ]
        }
      >
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 16,
                "width": 16,
              },
              Object {
                "tintColor": "rgb(0, 215, 117)",
              },
            ]
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": undefined,
                "lineHeight": 20,
              },
              false,
              Object {
                "flexGrow": 1,
                "paddingLeft": 4,
              },
            ]
          }
        >
          Successful alert.
        </Text>
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 16,
                "width": 16,
              },
              Object {
                "height": 16,
                "tintColor": "rgb(82, 76, 97)",
                "width": 16,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    collapsable={undefined}
    style={
      Object {
        "height": 1,
        "overflow": "hidden",
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": undefined,
                "lineHeight": 20,
              },
              false,
              Object {},
            ]
          }
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at.
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Android BpkBannerAlert should render correctly long text 1`] = `
<View
  style={
    Array [
      Object {
        "borderRadius": 4,
        "borderWidth": 1,
      },
      Object {
        "borderColor": "rgb(0, 215, 117)",
      },
    ]
  }
>
  <View
    style={
      Object {
        "display": "flex",
        "flexDirection": "row",
        "flexGrow": 1,
        "minHeight": 30,
      }
    }
  >
    <View
      accessibilityComponentType="button"
      accessibilityLabel={null}
      accessibilityTraits={undefined}
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Object {
            "display": "flex",
            "flexDirection": "row",
            "flexGrow": 1,
            "minHeight": 30,
          },
        ]
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Array [
              Object {
                "alignItems": "center",
                "display": "flex",
                "flexDirection": "row",
                "flexGrow": 1,
                "paddingBottom": 4,
                "paddingLeft": 8,
                "paddingRight": 8,
                "paddingTop": 4,
              },
            ],
          ]
        }
      >
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 16,
                "width": 16,
              },
              Object {
                "tintColor": "rgb(0, 215, 117)",
              },
            ]
          }
        />
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": undefined,
                "lineHeight": 20,
              },
              false,
              Object {
                "flexGrow": 1,
                "paddingLeft": 4,
              },
            ]
          }
        >
          Successful alert.
        </Text>
        <Image
          source={1}
          style={
            Array [
              Object {
                "height": 16,
                "width": 16,
              },
              Object {
                "height": 16,
                "tintColor": "rgb(82, 76, 97)",
                "width": 16,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    collapsable={undefined}
    style={
      Object {
        "height": 1,
        "overflow": "hidden",
      }
    }
  >
    <View
      onLayout={[Function]}
    >
      <View
        style={
          Array [
            Object {
              "paddingBottom": 4,
              "paddingLeft": 8,
              "paddingRight": 8,
            },
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "color": "rgb(82, 76, 97)",
                "fontFamily": "sans-serif",
                "fontSize": 14,
                "fontWeight": undefined,
                "lineHeight": 20,
              },
              false,
              Object {},
            ]
          }
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sagittis sagittis purus, id blandit ipsum. Pellentesque nec diam nec erat condimentum dapibus. Nunc diam augue, egestas id egestas ut, facilisis nec mi. Donec et congue odio, nec laoreet est. Integer rhoncus varius arcu, a fringilla libero laoreet at.
        </Text>
      </View>
    </View>
  </View>
</View>
`;
